fixing more alignment

--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ body {
   .grid-item-2 {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
-    padding-top: 20px;
+    padding-top: 50px;
   }
   .grid-item-3 {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
-    padding-left: 90px;
+    padding-left: 120px;
   }
   .grid-item-4 {
     padding: 0px 50px 0px 50px;
@@ -86,10 +86,11 @@ body {
   .grid-item-2 {
     grid-row: 1 / 2;
     align-self: start;
-    padding-top: 20px;
+    padding-top: 30px;
   }
   .grid-item-3 {
     grid-row: 2 / 3;
+    padding-top: 20px;
     padding-left: 20px;
   }
   .grid-item-4 {
